clusters/labinfra/apps/pinologger.xuperson.org/pinologger-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pinologger
  labels:
    app.kubernetes.io/name: pinologger
    app.kubernetes.io/managed-by: flux
