clusters/labinfra/apps/pinologger.xuperson.org/pinologger-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pinologger
  namespace: pinologger
  labels:
    app: pinologger
spec:
  selector:
    app: pinologger
  ports:
  - name: http
    port: 80
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
